--- a/README.Rmd
+++ b/README.Rmd
@@ -31,7 +31,7 @@ R-3.4.1 or higher
 ```{r, eval = FALSE}
 # Install the development version from GitHub:
 # install.packages("devtools")
-devtools::install_github("arestrom/remisc")
+devtools::install_github("arestrom/repg")
 ```
 
 
