Tweak to readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ options(tibble.print_min = 5, tibble.print_max = 5)
 
 ## Overview
 
-This package includes a collection of tools to work with PostgreSQL connections and databases. Connection functions require credentials to be stored in your
+This package includes a collection of tools to work with PostgreSQL connections and databases. Connection function requires credentials to be stored in your
 `.Renviron` file. This avoids the need to supply usernames or password in code. It also avoids potential for accidentally exposing credentials when sharing code in public repositories.
 
 The idea of storing credentials in the `.Renviron` file comes from a post by Hadley Wickham: 
